# byby

./: .env.example  .gitignore  ANALYSIS.md  CHANGELOG.md  Dockerfile  README.md  SHORTS_ENABLED.md  TRADING_GUIDE.md  analyze_data.py  analyze_signals.py  docker-compose.yml  ema_backtest.py  fetch_live_data.py  generate_realistic_data.py  pyproject.toml  run_backtest.py  simple_backtest.py  test_configurations.py  test_variations.py
.github/workflows/: ci.yml
byby/: __init__.py  cli.py  config.py  logging_config.py
byby/backtest/: engine.py  runner.py
byby/execution_engine/: engine.py  models.py  twap.py
byby/market_data/: data_manager.py  models.py  rest_client.py  ws_client.py
byby/monitoring/: alerts.py  metrics.py
byby/paper_trade/: runner.py
byby/persistence/: database.py  redis_client.py
byby/regime_detector/: detector.py  models.py
byby/risk_manager/: manager.py
byby/strategies/: base.py  mean_reversion.py  momentum_breakout.py  simple_breakout.py  trend_following.py
byby/strategy_manager/: manager.py
docker/: prometheus.yml
scripts/: fetch_data.py
tests/: conftest.py
tests/integration/: test_paper_trade_mock.py
tests/unit/: test_backtest.py  test_market_data.py  test_regime_detector.py  test_risk_manager.py  test_strategies.py
