[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byby"
version = "0.1.0"
description = "Adaptive trading bot for Bybit with regime-aware strategy management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "byby contributors"}
]
keywords = ["trading", "bybit", "cryptocurrency", "bot", "algorithmic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]
backtest = [
    "vectorbt>=0.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
]

[project.scripts]
byby = "byby.cli:main"
byby-backtest = "byby.backtest.runner:main"
byby-paper = "byby.paper_trade.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["byby*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=byby --cov-report=term-missing --cov-report=xml -v"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
